--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p>Gestionnaire de domaine / programme IT</p>
     <nav>
       <a href="#bio">Bio</a>
-      <a href="#blog">Blog</a>
+      <!--<a href="#blog">Blog</a>-->
       <a href="#liens">Liens</a>
     </nav>
   </header>
@@ -63,7 +63,7 @@
     <h2>À propos de moi</h2>
     <p>Je suis gestionnaire de domaine et de programme IT, passionné par les projets bien menés, la clarté dans le code comme dans les idées, et l’équilibre entre technologie et simplicité.</p>
   </section>
-
+  <!--
   <section id="blog">
     <h2>Derniers articles</h2>
 
@@ -72,10 +72,9 @@
       <p class="date">16 juin 2025</p>
       <p>Bienvenue sur mon blog ! Je partagerai ici des réflexions sur mes projets IT, des retours d'expérience, et quelques découvertes qui me tiennent à cœur.</p>
     </article>
-
-    <!-- Tu peux dupliquer ce bloc <article> pour ajouter d'autres billets -->
+  
   </section>
-
+  -->
   <section id="liens">
     <h2>Liens utiles</h2>
     <ul>
